Rename paste_clipboard_as_file.py to paste_as_file.py and update package.json to use the new name for the paste script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "author": "Brian Roach <itsbrexnpm@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "": "python3 paste-md-to-file"
+    "paste": "python3 $HOME/github/paste-clipboard-as-file/paste_as_file.py -ph"
   }
 }
